<resources>
	<string name="app_name">SDVGitHubClient</string>
	<string name="action_settings">Settings</string>
	<string name="action_log_out">Log out</string>
	<string name="action_log_in">Log in</string>
	<string name="action_enter_otp">Enter</string>
	<string name="commits_line_separator">Commits:</string>
	<string name="main_activity_title">Repositories list</string>
	<string name="two_factor_activity_title">Two-factor authentication</string>
	<string name="username">Username</string>
	<string name="sign_in">Sign In</string>
	<string name="password">Password</string>
	<string name="invalid_password">Please enter a valid password.</string>
	<string name="code_authentication_failed">Authentication failed! Incorrect verification code</string>
	<string name="show_password">Show password</string>
	<string name="wrong_login_or_pass">Wrong login or password</string>
	<string name="wrong_otp_code">Wrong OTP code</string>
	<string name="login_error">Cannot login, please try again</string>
	<string name="log_out_dialog_title">Logout?</string>
    <string name="log_out_dialog_message">
	    Warning: If you are using Two-Factor authorization
	    you will have to delete your personal access token manually at https://github.com/settings/tokens to login again
    </string>
	<string name="delete_auth_warning_dialog_title">ATTENTION</string>
	<string name="delete_auth_warning_dialog_message">
		Due to GitHub OAuth Authorizations API third-party apps can`t get personal access tokens from server,
		so if you have one for this app - you need to delete it manually at https://github.com/settings/tokens.
		Then you will be able to login with new Token generated in the process of authorization</string>
	<string name="signing_in_please_wait">Signing in. Please wait…</string>
	<string name="repo_icon_content_description">GitHub repository icon</string>
	<string name="forks_icon_content_description">GitHub fork icon</string>
	<string name="watches_icon_content_description">GitHub watch icon</string>
	<string name="avatar_content_description">Author`s avatar</string>
	<string name="two_factor_message">Enter 6-digit authentication code</string>
	<string name="zero_data_avatar">Cannot download pic</string>
	<string name="no_commits">There is no commits for this repository</string>
	<string name="zero_data_repos">Can`t download repositories. There may be no repositories</string>
	<string name="offline">No internet connection, sorry :`(</string>
	<string name="offline_pull">No internet connection, sorry :`(\nPull down to retry</string>
	<string name="offline_still_no_internet">Still no internet connection</string>
	<string name="zero_data_commits">Cannot download commits</string>
	<string name="retry_button">Retry</string>
	<string name="unable_remove_account">Unable to remove account</string>

</resources>
